Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19354

TSan: data race in ~FlowControl during test_mb17042_duplicate_name_consumer_connections

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • .master
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown
    • KV: April 13 - April 26

    Description

      Seen during commit-validation for master merge (http://cv.jenkins.couchbase.com/job/ep-engine-threadsanitizer-master/492/console), patch: http://review.couchbase.org/#/c/63170/

      [ RUN      ] ConnectionTest.test_mb17042_duplicate_name_consumer_connections
      ==================
      WARNING: ThreadSanitizer: data race (pid=86205)
        Write of size 8 at 0x7d1400004d68 by thread T6 (mutexes: write M132847):
          #0 std::_Rb_tree<void const*, std::pair<void const* const, DcpConsumer*>, std::_Select1st<std::pair<void const* const, DcpConsumer*> >, std::less<void const*>, std::allocator<std::pair<void const* const, DcpConsumer*> > >::_M_erase_aux(std::_Rb_tree_const_iterator<std::pair<void const* const, DcpConsumer*> >) /usr/bin/../lib/gcc/x86_64-linux-gnu/4.9/../../../../include/c++/4.9/bits/stl_tree.h:1868 (ep-engine_dcp_test+0x00000052e422)
          #1 FlowControl::~FlowControl() ep-engine/src/dcp/flow-control.cc:44 (ep-engine_dcp_test+0x00000052c551)
          #2 DcpConsumer::~DcpConsumer() ep-engine/src/dcp/consumer.cc:131 (ep-engine_dcp_test+0x00000051d53e)
          #3 DcpConsumer::~DcpConsumer() ep-engine/src/dcp/consumer.cc:129 (ep-engine_dcp_test+0x00000051dd15)
          #4 Processer::~Processer() ep-engine/src/atomic.h:272 (ep-engine_dcp_test+0x00000051c7fc)
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              owend Daniel Owen
              drigby Dave Rigby (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty