MB-19354 Make flow-control-manager thread safe

During shutdown the ConnsLock is not available.
Therefore make the flow-control-manager thread
safe as opposed to relying on an external lock.

Change-Id: Ia271a650e29983b8022850edfa193299ddd83f84
Reviewed-on: http://review.couchbase.org/63409
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Will Gardner <will.gardner@couchbase.com>
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>